# Petacat

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  FUTURE_DIRECTION.md  HELP.md  LICENSE.md  LOCALIZATION.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  smoke_test.py
alembic/: env.py
alembic/versions/: 001_metadata_schema.py  002_seed_metadata.py  003_runtime_schema.py  004_help_topics.py  005_indexes.py  006_enum_tables.py
client/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
client/src/: App.tsx  index.css
scripts/: generate_help_docs.py
seed_data/: codelet_types.json  commentary_templates.json  demo_problems.json  engine_params.json  enums.json  formula_coefficients.json  help_topics.en.json  posting_rules.json  slipnet_layout.json  slipnet_links.json  slipnet_nodes.json  theme_dimensions.json  urgency_levels.json
server/: config.py  db.py  main.py
server/api/: admin.py  controls.py  docs.py  memory.py  runs.py  ws.py
server/engine/: answers.py  bonds.py  bridges.py  coderack.py  commentary.py  concept_mappings.py  descriptions.py  formulas.py  groups.py  images.py  jootsing.py  justify.py  memory.py  metadata.py  rng.py  rules.py  runner.py  slipnet.py  temperature.py  themes.py  trace.py  workspace.py  workspace_objects.py  workspace_structures.py
server/models/: metadata.py  run.py
server/services/: help_docs.py  metadata_service.py  run_service.py  snapshot_service.py
tests/: conftest.py
tests/e2e/: conftest.py  test_api_controls.py  test_api_docs.py  (+5 more)
(+73 files in other folders)
